fix mass database deletion bug and properly align img to fit with div

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,6 +12,7 @@
 /* shrink image in fic to fit div */
 .print-container img {
 	width: 100%;
+	object-fit: cover;
 }
 
 /* convert <br/> to lines */
